--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,15 @@
     <fest.version>2.0M10</fest.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    
+      <!-- Jacoco Properties -->
+    <jacoco.version>0.7.4.201502262128</jacoco.version>
+    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+    <sonar.jacoco.itReportPath>${project.basedir}/target/jacoco-it.exec</sonar.jacoco.itReportPath>
+    <sonar.language>java</sonar.language> 
+    
+    
   </properties>
 
   <dependencies>
@@ -89,6 +98,80 @@
 
   <build>
     <plugins>
+              <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>${jacoco.version}</version>
+            <executions>
+                <execution>
+                    <id>prepare-unit-test-agent</id>
+                    <configuration>
+                    </configuration>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>jacoco-site</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>prepare-it-test-agent</id>
+                    <configuration>
+                        <propertyName>jacoco.agent.argLine</propertyName>
+                        <destFile>${sonar.jacoco.itReportPath}</destFile>
+                        <append>true</append>
+                    </configuration>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>2.12.4</version>
+            <configuration>
+                <argLine>${jacoco.agent.argLine}</argLine>
+            </configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>integration-test</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        
+        
+        <plugin>
+	    <groupId>org.pitest</groupId>
+	    <artifactId>pitest-maven</artifactId>
+	    <version>1.1.4</version>
+	    <configuration>
+	        <targetClasses>
+	            <param>com.disklrucache*</param>
+	        </targetClasses>
+	        <targetTests>
+	            <param>com.disklrucache.src.test*</param>
+	        </targetTests>
+	        <failWhenNoMutations>false</failWhenNoMutations>
+	            <outputFormats>
+	                <outputFormat>XML</outputFormat>
+	                <outputFormat>HTML</outputFormat>                      
+	            </outputFormats>   
+	    </configuration>
+	</plugin>
+        
+        
+        
+        
+        
+        
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
