--- a/pom.xml
+++ b/pom.xml
@@ -154,10 +154,10 @@
 	    <version>1.1.4</version>
 	    <configuration>
 	        <targetClasses>
-	            <param>com.disklrucache*</param>
+	            <param>com.disklrucache.workspace.src.main.*</param>
 	        </targetClasses>
 	        <targetTests>
-	            <param>com.disklrucache.src.test*</param>
+	            <param>com.disklrucache.workspace.src.test.*</param>
 	        </targetTests>
 	        <failWhenNoMutations>false</failWhenNoMutations>
 	            <outputFormats>
